--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,22 +1,11 @@
-# Spring Boot application configuration for development environment
-Server:
-  port: 8091
+MyServer:
+  PORT: 8091
+  Database:
+    HOST: localhost:5432
+    USER: postgres
+    PASS: "P@ssw0rd()SQL"
 
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/portfolio
-    username: portfolio
-    password: "P@ssw0rd()SQL"
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-
-
+MyEmail:
   mail:
     host: localhost
     port: 1025
