--- a/src/main/resources/application-qa.yml
+++ b/src/main/resources/application-qa.yml
@@ -1,14 +1,45 @@
 
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/Portfolio
-    username: postgres
-    password: "P@ssw0rd()SQL"
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
+# This is the configuration file for the QA environment.
+
+MyServer:
+  PORT: 8080
+  Database:
+    HOST: localhost:5432
+    USER: postgres
+    PASS: "P@ssw0rd()SQL"
+
+MyEmail:
+  mail:
+    host: localhost
+    port: 1025
+    username: hello
+    password: hello
+
     properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      mail:
+        smtp:
+          ssl:
+            trust: "*"
+          auth: true
+          starttls:
+            enable: true
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
+
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/Portfolio
+#    username: postgres
+#    password: "P@ssw0rd()SQL"
+#  jpa:
+#    hibernate:
+#      ddl-auto: create-drop
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
+#        format_sql: true
+
+
+
