--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,42 @@
 # Spring Boot application configuration for development environment
+server:
+  port: ${MyServer.PORT}
+
 spring:
   profiles:
-    active: dev
+    active: qa
+  application:
+    name: portfolio_API
+
+  # Database configuration
+  datasource:
+    url: jdbc:postgresql://${MyServer.Database.HOST}/Portfolio
+    username: ${MyServer.Database.USER}
+    password: "${MyServer.Database.PASS}"
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+
+  # Email configuration
+  mail:
+    host: ${MyEmail.mail.host}
+    port: ${MyEmail.mail.port}
+    username: ${MyEmail.mail.username}
+    password: ${MyEmail.mail.password}
+
+    properties:
+      mail:
+        smtp:
+          ssl:
+            trust: ${MyEmail.mail.properties.mail.smtp.ssl.trust}
+          auth: ${MyEmail.mail.properties.mail.smtp.auth}
+          starttls:
+            enable: ${MyEmail.mail.properties.mail.smtp.starttls.enable}
+          connectiontimeout: ${MyEmail.mail.properties.mail.smtp.connectiontimeout}
+          timeout: ${MyEmail.mail.properties.mail.smtp.timeout}
+          writetimeout: ${MyEmail.mail.properties.mail.smtp.writetimeout}
