--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,6 +2,7 @@ MyServer:
   PORT: 8091
   Database:
     HOST: localhost:5432
+    DBNAME: portfolio
     USER: postgres
     PASS: "P@ssw0rd()SQL"
 
