--- a/src/main/resources/application-qa.yml
+++ b/src/main/resources/application-qa.yml
@@ -5,6 +5,7 @@ MyServer:
   PORT: 8080
   Database:
     HOST: localhost:5432
+    DBNAME: Portfolio
     USER: postgres
     PASS: "P@ssw0rd()SQL"
 
@@ -26,6 +27,8 @@ MyEmail:
           connectiontimeout: 5000
           timeout: 3000
           writetimeout: 5000
+
+
 
 #spring:
 #  datasource:
