--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,13 @@
     <properties>
         <java.version>21</java.version>
     </properties>
+    <packaging>war</packaging>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
