--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: qa
   application:
     name: portfolio_API
 
@@ -15,7 +15,7 @@ spring:
     password: "${MyServer.Database.PASS}"
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
